@@ -1,6 +1,12 @@
 # ChangeLog for net-libs/xulrunner
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-libs/xulrunner/ChangeLog,v 1.111 2008/06/05 14:01:54 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-libs/xulrunner/ChangeLog,v 1.112 2008/06/12 15:18:54 armin76 Exp $
+
+*xulrunner-1.9_rc3 (12 Jun 2008)
+
+  12 Jun 2008; Raúl Porcel <armin76@gentoo.org> -xulrunner-1.9_rc1.ebuild,
+  -xulrunner-1.9_rc2.ebuild, +xulrunner-1.9_rc3.ebuild:
+  Version bump, remove old
 
 *xulrunner-1.9_rc2 (05 Jun 2008)
 
